# tunnel-forge

./: .clang-format  .clang-tidy  .cursorignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml  vpn.env.example
.github/codeql/: codeql-config.yml
.github/workflows/: android-instrumentation.yml  ci.yml  codeql.yml  release.yml
android/: .gitignore
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/kotlin/com/example/tunnel_forge/: JniEntryPointsTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  engine.h  esp_udp.c  esp_udp.h  gvisor_bridge.c  gvisor_bridge.h  ikev1.c  ikev1.h  ikev1_internal.h  ipv4_dataplane.c  ipv4_dataplane.h  l2tp.c  l2tp.h  l2tp_avps.c  l2tp_avps.h  modp2048_data.c  nat_t_keepalive.c  nat_t_keepalive.h  packet_endpoint.c  packet_endpoint.h  ppp.c  ppp.h  ppp_mschap.c  ppp_mschap.h  proxy_lwip.c  proxy_lwip.h  tunnel_loop.c  util.c  util_endian.c  util_endian.h  vpn_jni.c
android/app/src/main/cpp/lwip/: lwipopts.h
android/app/src/main/cpp/lwip/arch/: cc.h  sys_arch.h
android/app/src/main/kotlin/com/example/tunnel_forge/: IpPacketParser.kt  MainActivity.kt  ProxyPacketBridge.kt  ProxyServerRuntime.kt  ProxyTransport.kt  ProxyTunnelService.kt  TcpPacketBuilder.kt  TunnelVpnService.kt  TunneledDnsResolver.kt  UdpPacketBuilder.kt  UserspaceTunnelStack.kt  VpnBridge.kt  VpnContract.kt  VpnTunnelEvents.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-night-v31/: styles.xml
android/app/src/main/res/values-v31/: styles.xml
android/app/src/test/kotlin/com/example/tunnel_forge/: BridgeProxyTransportTest.kt  IpPacketParserTest.kt  (+6 more)
android/gvisor/: go.mod  go.sum  main.go  main_test.go
docs/fdroid/: io.github.evokelektrique.tunnelforge.yml
docs/fdroid/srclibs/: mbedtls.yml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 27.txt  28.txt  29.txt
fastlane/metadata/android/fa/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fa/changelogs/: 27.txt  28.txt  29.txt
integration_test/: app_test.dart
integration_test/support/: host_to_dart_channel.dart  vpn_channel_mock.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_info_bridge.dart  app_info_contract.dart  app_scaffold_messenger.dart  app_selector_page.dart  connectivity_checker.dart  main.dart  profile_editor_sheet.dart  profile_models.dart  profile_picker_sheet.dart  profile_store.dart  profile_transfer.dart  profile_transfer_bridge.dart  profile_transfer_contract.dart  theme.dart  vpn_client.dart  vpn_contract.dart
lib/app/: app.dart
lib/app/di/: injection.dart
lib/app/theme/: app_theme.dart
lib/core/logging/: log_entry.dart
lib/core/network/: connectivity_checker.dart
lib/core/platform/: app_info_bridge.dart
lib/features/app_selector/presentation/bloc/: app_selector_bloc.dart
lib/features/app_selector/presentation/pages/: app_selector_page.dart
lib/features/app_theme/data/: shared_prefs_theme_repository.dart
lib/features/app_theme/presentation/bloc/: app_theme_bloc.dart
lib/features/home/data/: home_repositories_impl.dart
lib/features/home/domain/: home_models.dart  home_repositories.dart  log_redaction.dart
lib/features/home/presentation/bloc/: connectivity_bloc.dart  home_nav_bloc.dart  logs_bloc.dart  profiles_bloc.dart  settings_bloc.dart  tunnel_bloc.dart
lib/features/home/presentation/pages/: home_page.dart
lib/features/home/presentation/widgets/: connection_panel.dart  logs_panel.dart  settings_panel.dart
lib/features/onboarding/data/: shared_prefs_onboarding_repository.dart  system_app_exit_controller.dart
lib/features/onboarding/domain/: app_exit_controller.dart  onboarding_repository.dart
lib/features/onboarding/presentation/bloc/: onboarding_bloc.dart
lib/features/onboarding/presentation/pages/: onboarding_page.dart
lib/features/profile_form/presentation/bloc/: profile_form_bloc.dart
lib/features/profiles/data/: profile_store.dart  profile_transfer_bridge.dart
lib/features/profiles/domain/: profile_models.dart  profile_transfer.dart
lib/features/profiles/presentation/: profile_editor_sheet.dart  profile_picker_sheet.dart
lib/features/tunnel/data/: vpn_client.dart  vpn_contract.dart
lib/features/tunnel/domain/: tunnel_runtime_state.dart
lib/l10n/: app_localizations.dart
lib/pages/: home_page.dart
lib/pages/home/: connectivity_controller.dart  home_scaffold.dart  logs_controller.dart  profiles_controller.dart  tunnel_controller.dart
lib/utils/: log_buffer.dart  log_entry.dart
lib/widgets/: connection_panel.dart  logs_panel.dart  settings_panel.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plan/: base_plan.md
test/: app_selector_bloc_test.dart  home_repositories_impl_test.dart  log_buffer_test.dart  logs_bloc_test.dart  logs_repository_test.dart  onboarding_bloc_test.dart  onboarding_repository_test.dart  onboarding_widget_test.dart  profile_editor_sheet_test.dart  profile_store_test.dart  profile_transfer_test.dart  profile_transfer_widget_test.dart  settings_bloc_test.dart  settings_panel_test.dart  tunnel_bloc_test.dart  vpn_client_test.dart  vpn_method_channel_test.dart  widget_test.dart
test/native/: CMakeLists.txt  test_endian.c  test_ipv4_dataplane.c  test_l2tp_avps.c  test_nat_t_keepalive.c  test_packet_endpoint.c  test_ppp_frame.c  test_ppp_ipcp.c  test_ppp_lcp.c  test_ppp_mschap_failure.c
test/support/: host_to_dart_channel.dart  vpn_channel_mock.dart
tool/: fdroid_prepare.sh  release.sh  run_native_tests.sh  version.sh  vpn_debug.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+52 files in other folders)
